Fixed up spacing for form

--- a/css/screen.css
+++ b/css/screen.css
@@ -204,11 +204,15 @@ h1 {
 }
 
 form {
-  line-height: 1.375em; /* 22px = 2 gridline*/
+  line-height: 1.375em; /* 22px = 1 gridline*/
+  display: inline-block;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 p {
-  padding-bottom: 1.222em; /* 22px */
+  padding-bottom: 1.375em; /* 22px = 1 gridline*/
 }
 
 div {
@@ -217,7 +221,9 @@ div {
 }
 
 /* Responsive Media */
-img, audio, video {
+img,
+audio,
+video {
   display: block;
   max-width: 100%;
 }
@@ -225,14 +231,25 @@ img, audio, video {
 
 /* ===== LAYOUT STYLES =====*/
 
-.title {
-  text-transform: uppercase;
+#submit {
+  margin: 1.375em; /* 22px = 1 gridline*/
 }
+
+
+#name, #email, #number {
+  margin: 0.6875em; /* 11px = 0.5 gridline*/
+}
+
+
+
+
 
 
 /* ===== MODULAR STYLES ===== */
 
-
+.title {
+  text-transform: uppercase;
+}
 
 
 /* ===== STATE STYLES ===== */
